<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/reactsy_configure_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reactsy_configure"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/config_test_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="6dp"
        android:text="@string/test_duration_label"
        android:layout_alignStart="@+id/config_min_valid_trials_pct_label"
        android:layout_alignEnd="@id/config_min_valid_trials_pct_label"
        android:layout_below="@id/reactsy_configure_title"/>

    <TextView
        android:id="@+id/config_min_delay_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="6dp"
        android:text="@string/min_delay_label"
        android:layout_alignStart="@+id/config_min_valid_trials_pct_label"
        android:layout_alignEnd="@id/config_min_valid_trials_pct_label"
        android:layout_below="@id/config_test_duration_label"/>

    <TextView
        android:id="@+id/config_max_delay_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="6dp"
        android:text="@string/max_delay_label"
        android:layout_alignStart="@+id/config_min_valid_trials_pct_label"
        android:layout_alignEnd="@id/config_min_valid_trials_pct_label"
        android:layout_below="@id/config_min_delay_label"/>

    <TextView
        android:id="@+id/config_too_soon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="6dp"
        android:text="@string/too_soon_label"
        android:layout_alignStart="@+id/config_min_valid_trials_pct_label"
        android:layout_alignEnd="@id/config_min_valid_trials_pct_label"
        android:layout_below="@id/config_max_delay_label"/>

    <TextView
        android:id="@+id/config_too_late_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="6dp"
        android:text="@string/too_late_label"
        android:layout_alignStart="@+id/config_min_valid_trials_pct_label"
        android:layout_alignEnd="@id/config_min_valid_trials_pct_label"
        android:layout_below="@id/config_too_soon_label"/>

    <TextView
        android:id="@+id/config_recovery_delay_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="6dp"
        android:text="@string/recovery_delay_label"
        android:layout_alignStart="@+id/config_min_valid_trials_pct_label"
        android:layout_alignEnd="@id/config_min_valid_trials_pct_label"
        android:layout_below="@id/config_too_late_label"/>

    <TextView
        android:id="@+id/config_min_valid_trials_pct_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="6dp"
        android:text="@string/min_valid_trials_pct_label"
        android:layout_alignStart="@+id/config_min_valid_trials_pct_label"
        android:layout_alignEnd="@id/config_min_valid_trials_pct_label"
        android:layout_below="@id/config_recovery_delay_label"/>

    <TextView
        android:id="@+id/config_test_mechanism_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="40dp"
        android:text="@string/test_mechanism_label"
        android:layout_alignStart="@+id/config_min_valid_trials_pct_label"
        android:layout_alignBaseline="@+id/config_test_mechanism"/>
    
    <EditText
        android:id="@+id/config_test_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        android:gravity="right"
        android:layout_alignBottom="@id/config_test_duration_label"
        android:layout_toRightOf="@id/config_test_duration_label" />

    <TextView
        android:id="@+id/config_test_duration_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="sec"
        android:layout_alignBaseline="@id/config_test_duration"
        android:layout_toRightOf="@id/config_test_duration" />

    <EditText
        android:id="@+id/config_min_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        android:gravity="right"
        android:layout_alignBottom="@id/config_min_delay_label"
        android:layout_toRightOf="@id/config_min_delay_label" />

    <TextView
        android:id="@+id/config_min_delay_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="ms"
        android:layout_alignBaseline="@id/config_min_delay"
        android:layout_toRightOf="@id/config_min_delay" />

    <EditText
        android:id="@+id/config_max_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        android:gravity="right"
        android:layout_alignBottom="@id/config_max_delay_label"
        android:layout_toRightOf="@id/config_max_delay_label" />

    <TextView
        android:id="@+id/config_max_delay_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="ms"
        android:layout_alignBaseline="@id/config_max_delay"
        android:layout_toRightOf="@id/config_max_delay" />

    <EditText
        android:id="@+id/config_too_soon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        android:gravity="right"
        android:layout_alignBottom="@id/config_too_soon_label"
        android:layout_toRightOf="@id/config_too_soon_label" />

    <TextView
        android:id="@+id/config_too_soon_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="ms"
        android:layout_alignBaseline="@id/config_too_soon"
        android:layout_toRightOf="@id/config_too_soon" />

    <EditText
        android:id="@+id/config_too_late"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        android:gravity="right"
        android:layout_alignBottom="@id/config_too_late_label"
        android:layout_toRightOf="@id/config_too_late_label" />

    <TextView
        android:id="@+id/config_too_late_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="ms"
        android:layout_alignBaseline="@id/config_too_late"
        android:layout_toRightOf="@id/config_too_late" />

    <EditText
        android:id="@+id/config_recovery_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        android:gravity="right"
        android:layout_alignBottom="@id/config_recovery_delay_label"
        android:layout_toRightOf="@id/config_recovery_delay_label" />

    <TextView
        android:id="@+id/config_recovery_delay_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="ms"
        android:layout_alignBaseline="@id/config_recovery_delay"
        android:layout_toRightOf="@id/config_recovery_delay" />

    <EditText
        android:id="@+id/config_min_valid_trials_pct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="number"
        android:gravity="right"
        android:layout_alignBottom="@id/config_min_valid_trials_pct_label"
        android:layout_toRightOf="@id/config_min_valid_trials_pct_label" />

    <TextView
        android:id="@+id/config_min_valid_trials_pct_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="%"
        android:layout_alignBaseline="@id/config_min_valid_trials_pct"
        android:layout_toRightOf="@id/config_min_valid_trials_pct" />

    <Switch
        android:id="@+id/config_test_mechanism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textOn="@string/finger_down_mechanism"
        android:textOff="@string/finger_up_mechanism"
        android:layout_below="@id/config_min_valid_trials_pct_label"
        android:layout_toRightOf="@id/config_test_mechanism_label"/>

    <Button
        android:id="@+id/create_notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_notification"
        android:layout_below="@id/config_test_mechanism"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"/>

    <Button
        android:id="@+id/run_reactsy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_reactsy"
        android:layout_below="@id/config_test_mechanism"
        android:layout_toRightOf="@id/create_notification_button"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"/>

</RelativeLayout>