<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/reactsy_test_results"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/reactsy_test_results"
        android:gravity="center"
        android:textSize="30sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/num_trials_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:text="@string/num_trials_label"
            android:layout_alignStart="@+id/std_dev_label"
            android:layout_alignEnd="@id/std_dev_label"/>

        <TextView
            android:id="@+id/mean_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:text="@string/mean_label"
            android:layout_alignStart="@id/std_dev_label"
            android:layout_alignEnd="@id/std_dev_label"
            android:layout_below="@id/num_trials_label"/>

        <TextView
            android:id="@+id/variance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:text="@string/variance_label"
            android:layout_alignStart="@id/std_dev_label"
            android:layout_alignEnd="@id/std_dev_label"
            android:layout_below="@id/mean_label"/>

        <TextView
            android:id="@+id/std_dev_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/std_dev_label"
            android:layout_below="@id/variance_label"/>

        <TextView
            android:id="@+id/num_trials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="Hello"
            android:layout_alignTop="@id/num_trials_label"
            android:layout_toRightOf="@id/std_dev_label" />

        <TextView
            android:id="@+id/mean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="Hello"
            android:layout_alignTop="@id/mean_label"
            android:layout_toRightOf="@id/std_dev_label" />

        <TextView
            android:id="@+id/variance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="Hello"
            android:layout_alignTop="@id/variance_label"
            android:layout_toRightOf="@id/std_dev_label" />

        <TextView
            android:id="@+id/std_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="Hello"
            android:layout_alignTop="@id/std_dev_label"
            android:layout_toRightOf="@id/std_dev_label" />

    </RelativeLayout>

    <ListView
        android:id="@+id/test_results_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:divider="@android:color/black"
        android:dividerHeight="1dp"
        />

    <Button
        android:id="@+id/view_parameters_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/view_parameters"/>
</LinearLayout>